# Task_2_sem_4_update

./: CComplNumb.cpp  CComplNumb.h  CComplVect.cpp  CComplVect.h  CComplVectHori.cpp  CComplVectHori.h  CComplVectVert.cpp  CComplVectVert.h  CFactoryComplVect.h  CFactoryComplVectVert.h  CMakeLists.txt  data.txt  main.cpp
